feat: migrations knex configurado

--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,11 @@
 PORT=3000
 
-DB_ENVIRONMENT=development
+NODE_ENV=production
+
+IS_LOCALHOST=false
+
 DB_HOST=
 DB_USER=
 DB_NAME=
 DB_PASS=
-DB_PORT='5432'
+DB_PORT=5432
