fix: alterado comando node

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.js",
-    "start": "node ./srv/index.js",
+    "start": "node ./src/index.js",
     "knex:rollback-all": "knex --knexfile ./src/database/knex/Environment.js migrate:rollback --all",
     "knex:rollback": "knex --knexfile ./src/database/knex/Environment.js migrate:rollback",
     "knex:migrate-latest": "knex --knexfile ./src/database/knex/Environment.js migrate:latest",
