fix: alterado env example

--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,5 @@
 PORT=3000
 
-NODE_ENV=production
+NODE_ENV=
 
-IS_LOCALHOST=false
-
-DB_HOST=
-DB_USER=
-DB_NAME=
-DB_PASS=
-DB_PORT=5432
+IS_LOCALHOST=
