--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "knex:migrate-next": "knex --knexfile ./src/database/knex/Environment.js migrate:up",
     "knex:migrate-make": "knex --knexfile ./src/database/knex/Environment.js migrate:make clientes",
     "knex:seed-make": "knex --knexfile ./src/database/knex/Environment.js seed:make categorias",
-    "knex:seed-run": "knex --knexfile ./src/database/knex/Environment.js seed:run"
+    "knex:seed-run": "knex --knexfile ./src/database/knex/Environment.js seed:run",
+    "knex:preparar": "npm run knex:migrate-latest && npm run knex:seed-run"
   },
   "keywords": [],
   "author": "",
