--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/lib-storage": "^3.454.0",
     "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
